src/adapters/cli/output/tests/snapshots/venmo_cli__adapters__cli__output__tests__writes__pay_result.snap
---
source: src/adapters/cli/output/tests/writes.rs
expression: pay_output
---
Payment ID: payment-1
Status: settled
Recipient: @bob (Synthetic\nrecipient)
Amount: $0.01
Requested audience: private
Submitted funding source ID: bank-1
