src/adapters/cli/output/tests/snapshots/venmo_cli__adapters__cli__output__tests__writes__protected_pay_result.snap
---
source: src/adapters/cli/output/tests/writes.rs
expression: "String::from_utf8(protected_output)?"
---
Payment ID: payment-2
Status: settled
Recipient: @bob (Synthetic\nrecipient)
Amount: $1.00
Requested audience: private
Purchase protection: tagged by Venmo
Submitted funding source ID: bank-1
