src/adapters/cli/output/tests/snapshots/venmo_cli__adapters__cli__output__tests__writes__request_create_details.snap
---
source: src/adapters/cli/output/tests/writes.rs
expression: request_details
---
Request creation details:
  Requesting account: @owner (ID 123)
  Requested from: @bob (Synthetic User) (ID 456)
  Amount: $0.01
  Note: Synthetic note
  Requested audience: public
  Action: create payment request
