src/adapters/cli/output/tests/snapshots/venmo_cli__adapters__cli__output__tests__writes__request_create_result.snap
---
source: src/adapters/cli/output/tests/writes.rs
expression: request_output
---
Request ID: request-1
Status: pending
Requested from: @bob (Synthetic User)
Amount: $0.01
Requested audience: private
